# speedtest

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  pyproject.toml
speedtest/: __init__.py  __main__.py  _decorators.py  _ioops.py  _kwargs.py  _log.py  _processor.py  _speedtree.py  _stringify.py
tests/: test_parametrize.py  test_read.py  test_session.py  test_stringify.py  test_tree.py
tests/examples/: speed_basic.py  speed_numpy_compare.py
