[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "speedtest"
version = "0.1.0"
description = "Testing the profiling of code snippets in a PyTest-style format."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
speedtest = "speedtest.__main__:cli_interface"

[dependency-groups]
all = [
    "python-dotenv>=1.0.0",
    "rich>=14.0.0",
]
dev = [
    "numpy>=1.24.4",
    "pre-commit>=3.5.0",
    "pytest-cov>=5",
    "python-dotenv>=1.0.0",
    "rich>=14.0.0",
    "ruff>=0.12.5",
]

[tool.pytest]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["/**/__init__.py"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pylint]
disable = ["C0209"] 
